# tap-shapefile

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
data/: test.dbf  test.shp  test.shx  test_10000.shx
tap_shapefile/: __init__.py  client.py  tap.py
tests/: __init__.py  test_core.py
