[tool.poetry]
name = "tap-shapefile"
version = "0.0.3"
description = "`tap-shapefile` is a Singer tap for shapefile, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Chris Hansen <cmhhansen@outlook.com>"]
keywords = [
    "ELT",
    "shapefile",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.32.0b2" }
pyshp = { version = "^2.3.1" }
pygeoif = { version = "^1.0.0" }
fs-s3fs = { version = "^1.1.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
singer-sdk = { version="^0.32.0b2", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_shapefile"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_shapefile"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-shapefile = 'tap_shapefile.tap:TapShapefile.cli'
